appId: com.youmotion.mobile
---
- launchApp
- openLink:
    link: exp+youmotion://expo-development-client/?url=http%3A%2F%2F127.0.0.1%3A8082
- tapOn:
    text: Open
    optional: true
- tapOn:
    text: http://127.0.0.1:8082
    optional: true
- extendedWaitUntil:
    visible:
      id: today-screen
    timeout: 30000
